added attackSquads